seat & producer & artist_name and update Agentic RAG & Recommend item